"Added the images for the welcome section"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CYF</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="assets/sass/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
@@ -13,17 +13,16 @@
       <div class="hgroup">
         <h1>&#60;<span id="code">Code</span>&#62; Your Future</h1>
         <h2>&#64; London </h2>
-        <p><a href="#welcome"><img src="assets/images/misc/arrow.png" alt="down arrow"></a></p>
+        <p><a href="#welcome"><img src="assets/images/arrow.png" alt="down arrow"></a></p>
       </div>
     </article>
-
     <nav id="nav">
       <div class="navbar">
         <div class="brand"><a href="#welcome"><span class="full">Code Your Future</span><span class="abbreviation">CYF</span></a></div>
         <ul>
-          <li><a class="icon" href="#hotelinfo"><i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp;&nbsp;<span>About CYF</span></a></li>
-          <li><a class="icon" href="#dining"><i class="fa fa-newspaper-o" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>News</span></a></li>
-          <li><a class="icon" href="#attractions"><i class="fa fa-hand-o-right" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>Apply</span></a></li>
+          <li><a class="icon" href="#CYFinfo"><i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp;&nbsp;<span>About CYF</span></a></li>
+          <li><a class="icon" href="#news"><i class="fa fa-newspaper-o" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>News</span></a></li>
+          <li><a class="icon" href="#applyÓ"><i class="fa fa-hand-o-right" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>Apply</span></a></li>
           <li><a class="icon" href="#socialmedia"><i class="fa fa-comments" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>Say Hi!</span></a></li>
         </ul>
       </div><!-- navbar -->
