--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a class="icon" href="#CYFinfo"><i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp;&nbsp;<span>About CYF</span></a></li>
           <li><a class="icon" href="#news"><i class="fa fa-newspaper-o" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>News</span></a></li>
-          <li><a class="icon" href="#applyÓ"><i class="fa fa-hand-o-right" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>Apply</span></a></li>
+          <li><a class="icon" href="#apply"><i class="fa fa-hand-o-right" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>Apply</span></a></li>
           <li><a class="icon" href="#socialmedia"><i class="fa fa-comments" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>Say Hi!</span></a></li>
         </ul>
       </div><!-- navbar -->
@@ -70,6 +70,45 @@
       <p>You can get a more detailed list of recent works we have done <i class="fa fa-angle-double-right" aria-hidden="true"></i> <a href= "#"><strong>here</strong></a></p>
     </article>
   </div><!-- CYFinfo -->
+  <div class="scene" id="news">
+    <article id="areadining">
+      <h1>News</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </article>
+    <article>
+      <section id="news1">
+        <h2>Graduation</h2>
+        <img src="assets/images/4.jpg" alt="Dining">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+          in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+
+      <section id="news2">
+        <h2>Manchester Branch</h2>
+        <img src="assets/images/1.jpg" alt="Dining">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+          in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+
+      <section id="news3">
+        <h2>Scotland &mdash; Edinburgh Branch </h2>
+        <img src="assets/images/2.jpg" alt="Dining">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+          in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+    </article><!-- inhotel -->
+    <article id="newsDetail">
+      <h1>Room Service</h1>
+      <p>If you’d rather stay in your room and enjoy a quiet evening in, or a relaxing breakfast in bed, room service options are available for all of our dining choices.</p>
+    </article>
+  </div><!-- news -->
+  
   </main>
+
 </body>
 </html>
