--- a/index.html
+++ b/index.html
@@ -107,7 +107,43 @@
       <p>If you’d rather stay in your room and enjoy a quiet evening in, or a relaxing breakfast in bed, room service options are available for all of our dining choices.</p>
     </article>
   </div><!-- news -->
-  
+  <div class="scene fullheight" id="apply">
+    <article class="content">
+      <h1>For more information or to just say Hi!</h1>
+        <form class="contactUs" action="index.html" method="post">
+          <div class="form_group">
+            <label for="fullName">Full Name :</label>
+            <div class="">
+              <input type="text" name="fullName" id="fullName">
+            </div>
+          </div>
+          <div class="form_group">
+            <label for="email">Email :</label>
+            <div class="">
+              <input type="text" name="email" id="email">
+            </div>
+          </div>
+          <div class="form_group">
+            <label for="phoneNumber">Phone Number :</label>
+            <div class="">
+              <input type="text" name="phoneNumber" id="phoneNumber">
+            </div>
+          </div>
+          <div class="form_group">
+            <label for="message">Message :</label>
+            <div class="">
+              <textarea name="message" rows="12" cols="30" id="message"></textarea>
+            </div>
+          </div>
+          <div class="form_group">
+            <label for="submit">&nbsp;</label>
+            <div class="">
+              <button type="submit" name="submit">Send&nbsp;&nbsp;<i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+            </div>
+          </div>
+        </form>
+    </article>
+  </div><!-- apply -->
   </main>
 
 </body>
