Added the footer section with social media

--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@
     </article>
   </div><!-- apply -->
   </main>
-
+  <footer class="scene">
+  <article class="content">
+    <div id="socialmedia">
+      <ul class="group">
+        <li><a href="https://twitter.com" class="badge social twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        <li><a href="http://www.facebook.com" class="badge social facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="http://www.googleplus.com" class="badge social gplus"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+        <li><a href="http://www.youtube.com" class="badge social youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+        <li><a href="http://www.github.com" class="badge social github"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+      </ul>
+    </div>
+  </article>
+</footer>
 </body>
 </html>
