--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="Kiya Gur.">
   <title>CYF</title>
-  <link rel="stylesheet" href="assets/sass/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
@@ -43,22 +44,22 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
     </article>
-    <article id="usefulinfo">
+    <article id="CYFFocus">
       <h2>Our forcus</h2>
-      <section id="arrivalinfo">
+      <section id="teaching">
         <h3>Teaching Web Technology</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
           in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </section>
-      <section class="checklist" id="services">
+      <section id="networking">
         <h2>Networking</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
           in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
       </section>
-      <section class="checklist" id="accessibility">
+      <section id="technology">
         <h2>Technology</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
@@ -66,12 +67,12 @@
 
       </section>
     </article>
-    <article id="greenprogram">
-      <p>You can get a more detailed list of recent works we have done <i class="fa fa-angle-double-right" aria-hidden="true"></i> <a href= "#"><strong>here</strong></a></p>
+    <article id="moreDetails">
+      <p>You can get a more detailed list of our recent works <i class="fa fa-angle-double-right" aria-hidden="true"></i> <a href= "#"><strong>here</strong></a></p>
     </article>
   </div><!-- CYFinfo -->
   <div class="scene" id="news">
-    <article id="areadining">
+    <article id="newsIntro">
       <h1>News</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
         ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -103,22 +104,24 @@
       </section>
     </article><!-- inhotel -->
     <article id="newsDetail">
-      <h1>Room Service</h1>
-      <p>If you’d rather stay in your room and enjoy a quiet evening in, or a relaxing breakfast in bed, room service options are available for all of our dining choices.</p>
+      <h1>Heading</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </article>
   </div><!-- news -->
   <div class="scene fullheight" id="apply">
     <article class="content">
-      <h1>For more information or to just say Hi!</h1>
+      <h1>To apply <span>or to just say Hi!</span> send us a message</h1>
         <form class="contactUs" action="index.html" method="post">
           <div class="form_group">
-            <label for="fullName">Full Name :</label>
+            <label for="fullName"><span>&#42;</span>&nbsp;Full Name :</label>
             <div class="">
               <input type="text" name="fullName" id="fullName">
             </div>
           </div>
           <div class="form_group">
-            <label for="email">Email :</label>
+            <label for="email"><span>&#42;</span>&nbsp;Email :</label>
             <div class="">
               <input type="text" name="email" id="email">
             </div>
@@ -130,9 +133,9 @@
             </div>
           </div>
           <div class="form_group">
-            <label for="message">Message :</label>
+            <label for="message"><span>&#42;</span>&nbsp;Message :</label>
             <div class="">
-              <textarea name="message" rows="12" cols="30" id="message"></textarea>
+              <textarea name="message" rows="12" cols="60" id="message"></textarea>
             </div>
           </div>
           <div class="form_group">
@@ -142,6 +145,7 @@
             </div>
           </div>
         </form>
+        <p><span>&#42;</span> - required fields</p>
     </article>
   </div><!-- apply -->
   </main>
@@ -158,5 +162,6 @@
     </div>
   </article>
 </footer>
+<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
