created the validation for the more information or apply section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="form_group">
             <label for="submit">&nbsp;</label>
             <div class="">
-              <button type="submit" name="submit">Send&nbsp;&nbsp;<i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+              <button type="submit" id="submit">Send&nbsp;&nbsp;<i class="fa fa-paper-plane" aria-hidden="true"></i></button>
             </div>
           </div>
         </form>
