--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
           in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <button class="readMore" id="btnNews1">More</button>
       </section>
-
       <section id="news2">
         <h2>Manchester Branch</h2>
         <img src="assets/images/1.jpg" alt="Dining">
@@ -96,7 +95,6 @@
           in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <button class="readMore" id="btnNews2">More</button>
       </section>
-
       <section id="news3">
         <h2>Scotland &mdash; Edinburgh Branch </h2>
         <img src="assets/images/2.jpg" alt="Dining">
@@ -105,7 +103,7 @@
           in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <button class="readMore" id="btnNews3">More</button>
       </section>
-    </article><!-- inhotel -->
+    </article><!-- newsIntro-->
     <article id="newsDetail">
       <h1>Heading</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
