changed the value of the alt attribute of the images in the news section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <article>
       <section id="news1">
         <h2>Graduation</h2>
-        <img src="assets/images/19.jpg" alt="Dining">
+        <img src="assets/images/19.jpg" alt="Graduation">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
           in voluptate velit esse illum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -88,7 +88,7 @@
       </section>
       <section id="news2">
         <h2>Manchester Branch</h2>
-        <img src="assets/images/18.jpg" alt="Dining">
+        <img src="assets/images/18.jpg" alt="Manchester Branch">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
           in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -96,7 +96,7 @@
       </section>
       <section id="news3">
         <h2>Scotland &mdash; Edinburgh Branch </h2>
-        <img src="assets/images/23.jpg" alt="Dining">
+        <img src="assets/images/23.jpg" alt="scotaland Branch">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
           in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
