--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </section>
       <section id="news3">
         <h2>Scotland &mdash; Edinburgh Branch </h2>
-        <img src="assets/images/23.jpg" alt="scotaland Branch">
+        <img src="assets/images/23.jpg" alt="scotland Branch">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
           in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
