added the download icon for moreDetails section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </section>
     </article>
     <article id="moreDetails">
-      <p>You can get a more detailed list of our recent works <i class="fa fa-angle-double-right" aria-hidden="true"></i> <a href= "#"><strong>here</strong></a></p>
+      <p>You can get a more detailed list of our recent works <i class="fa fa-angle-double-right" aria-hidden="true"></i> <a href= "#" download><strong>here <i class="fa fa-download" aria-hidden="true"></i></strong></a></p>
     </article>
   </div><!-- CYFinfo -->
   <div class="scene" id="news">
