created news feeds from API

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <header id="intro">
     <article class="fullheight">
       <div class="hgroup">
-        <h1>&#60;<span id="code">Code</span>&#62; Your Future</h1>
+        <h1>&#60;<span>Code</span>&#62; Your Future</h1>
         <h2>&#64; London </h2>
         <p><a href="#welcome"><img src="assets/images/arrow.png" alt="down arrow"></a></p>
       </div>
     </article>
     <nav id="nav">
       <div class="navbar">
-        <div class="brand"><a href="#welcome"><span class="full">Code Your Future</span><span class="abbreviation">CYF</span></a></div>
+        <div class="brand"><a href="#welcome"><span class="full">&#60;<span id="code">Code</span>&#62; Your Future</span><span class="abbreviation">CYF</span></a></div>
         <ul>
           <li><a class="icon" href="#CYFinfo"><i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp;&nbsp;<span>About CYF</span></a></li>
           <li><a class="icon" href="#news"><i class="fa fa-newspaper-o" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>News</span></a></li>
-          <li><a class="icon" href="#apply"><i class="fa fa-hand-o-right" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>Apply</span></a></li>
+          <li><a class="icon" href="#apply"><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>Apply</span></a></li>
           <li><a class="icon" href="#socialmedia"><i class="fa fa-comments" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<span>Say Hi!</span></a></li>
         </ul>
       </div><!-- navbar -->
@@ -32,7 +32,7 @@
   <main id="wrapper">
     <div class="scene" id="welcome">
     <article class="content">
-      <h1>Welcome to Code&nbsp;Your&nbsp;Future</h1>
+      <h1>Welcome to Code&nbsp;Your&nbsp;Future&nbsp;&nbsp;&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></h1>
       <p>Code Your Future is Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
         ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
         esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -76,38 +76,16 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
         ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
         voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </article>
-    <article>
-      <section id="news1">
-        <h2>Graduation</h2>
-        <img src="assets/images/19.jpg" alt="Graduation">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-          in voluptate velit esse illum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button class="readMore" id="btnNews1">More</button>
-      </section>
-      <section id="news2">
-        <h2>Manchester Branch</h2>
-        <img src="assets/images/18.jpg" alt="Manchester Branch">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-          in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button class="readMore" id="btnNews2">More</button>
-      </section>
-      <section id="news3">
-        <h2>Scotland &mdash; Edinburgh Branch </h2>
-        <img src="assets/images/23.jpg" alt="scotland Branch">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-          in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button class="readMore" id="btnNews3">More</button>
-      </section>
     </article><!-- newsIntro-->
+    <article id = "newsSection">
+    </article><!-- newsSection-->
     <article id="newsDetail">
-      <h1>Heading</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div id="newsDetailContent">
+        <span class="close"><i class="fa fa-times-circle-o" aria-hidden="true"></i></span>
+        <h2 id="newsDetailContentHeading"></h2>
+        <img src="" alt="">
+        <p class="newsDetailContentP"></p>
+      </div>
     </article>
   </div><!-- news -->
   <div class="scene fullheight" id="apply">
