--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <main id="wrapper">
     <div class="scene" id="welcome">
     <article class="content">
-      <h1>Welcome to Code&nbsp;Your&nbsp;Future&nbsp;&nbsp;&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></h1>
+      <h1>Welcome to Code&nbsp;Your&nbsp;Future&nbsp;&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></h1>
       <p>Code Your Future is Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
         ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
         esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
