modified the icon for linking to the Welcome sectoin

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="hgroup">
         <h1>&#60;<span>Code</span>&#62; Your Future</h1>
         <h2>&#64; London </h2>
-        <p><a href="#welcome"><img src="assets/images/arrow.png" alt="down arrow"></a></p>
+        <p><a href="#welcome"><i class="fa fa-angle-double-down fa-lg" aria-hidden="true"> </i></a></p>
       </div>
     </article>
     <nav id="nav">
